# Veridion

./: README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: __init__.py
docs/: vision.md
docs/adr/: 0001-founding-architecture.md  ADR-0002-Evidence-Provider-Architecture.md  ADR-0003-Reasoning-Engine-Architecture.md
docs/prd/: 0001-Veridion-Reasoning-Engine-PRD.md
infra/docker/: docker-compose.yml
research/knowledge-base/reports/: 01-investment-firm-operations-research-and-veridion-architecture-guide.md
tests/unit/: test_config.py  test_logging.py
