[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veridion"
version = "0.1.0"
description = "Deterministic multi-agent investment-reasoning system"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "apps*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 88
